Add scripted filter
